Memory leak weak fix. Separated ImageLoader. Cisco improvements. No OutOfMemory, but not liner loading.